# MT_krum_code

./: .gitignore  README.md  data_merging.py  pyproject.toml
01_data_preparation/01_preprocessing/: 01_ldacs.ipynb  01_ldacs_actual.ipynb  02_meteo.ipynb  03_flightplan.ipynb
01_data_preparation/02_merging/: 01_data_merging.ipynb
01_data_preparation/03_sample_generation/: 01_encoding_scaling_splitting.ipynb  02_sample_generation.ipynb
02_model_training/: 01_architecture_sweep.ipynb  02_training_with_mass.ipynb  03_training_without_mass.ipynb  training_with_mass.ipynb  training_without_mass.ipynb
03_analysis/: 01_performance_analysis.ipynb  01_visual_assessment.ipynb  02_impact_of_mass.ipynb  02_qualitative_performance_analysis.ipynb  03_impact_of_mass_availability.ipynb  03_takeoff_distance.ipynb  04_out_of_sample_performance.ipynb  04_take_off_distance._prediction.ipynb  04_take_off_distance_prediction.ipynb  05_animation.ipynb  05_erroneous_input.ipynb  06_out_of_cyliner_performance.ipynb  animation.ipynb
04_thesis_plots/: 01_dataset_creation.ipynb  02_evaluation.ipynb
99_plots/: 01_dataset_creation.ipynb
99_thesis_plots/: 01_dataset_creation.ipynb  02_evaluation.ipynb
envs/training/: =4.2.0  pyproject.toml
models/: helpful-tree-123.keras  solar-grass-124.keras
src/01_data_processing/ads-b/: add_route.ipynb  data_merging.ipynb  test.ipynb  training_data.ipynb
src/02_model_training/: training_test.ipynb
src/99_report_visualisations/: test.ipynb
