[tool.poetry]
name = "mt-krum"
version = "0.1.0"
description = ""
authors = ["Jan <krum@zhaw.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
traffic = "^2.9.0"
plotly = "^5.19.0"
nbformat = "^5.9.2"


[tool.poetry.group.cm_cluster.dependencies]
cm-jupyter-eg-kernel-wlm = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
